2010-08-25  Leo Yang  <leo.yang@torchmobile.com.cn>

Reviewed by Simon Hausmann.

        In FrameLoaderClientQt::createFrame we should call loadURLIntoChildFrame
        with parent frame's loader instead of child frame's loader.
        https://bugs.webkit.org/show_bug.cgi?id=43930

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createFrame):

Canonical link: https://commits.webkit.org/56809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66030 268f45cc-cd09-0410-ab3c-d52691b4dbfc